# jupyter-tldraw

./: .gitignore  LICENSE  Makefile  README.md  basic.ipynb  demo_basic.ipynb  demo_makereal.ipynb  demo_makereal_blender.ipynb  demo_makereal_custom_prompt.ipynb  demo_makereal_davinci_resolve.ipynb  demo_makereal_ipywidget.ipynb  demo_reactive_colorpicker.ipynb  demo_storage.ipynb  dev_notes.md  euroscipy.ipynb  example_basic.ipynb  example_from_points.ipynb  example_image_segmentation.ipynb  example_matplotlib_annotate.ipynb  example_notebook.ipynb  get_stroke.ipynb  hello.ipynb  hi.ipynb  ipyreact.ipynb  marimo_reactive_app.py  matplotlib_annotation.ipynb  monkey.ipynb  monkey_marimo.py  node_config.mjs  out.mov  package-lock.json  package.json  pyproject.toml  requirements.txt  testing_bidirectional.ipynb  testing_coordinates.ipynb  testing_function_call.ipynb  testing_get_stroke.ipynb  tldraw_v1_basic.ipynb  tldraw_v1_example_from_points.ipynb  (+6 more)
.binder/: requirements.txt
.github/: FUNDING.yml
.jupyterlite/: requirements.txt
anywidget/: confetti-random.js  confetti.js  minimal_example.ipynb  react_bundle.js  react_example.ipynb  react_index.jsx  widget_classic.ipynb  widget_counter.ipynb
content/: basic.ipynb  bug.ipynb  example_matplotlib.ipynb  idea_bidirectional_communication.ipynb  idea_bidirectional_communitcation.ipynb  image_segmentation.ipynb  matplotlib_annotation.ipynb  testing-version2.ipynb
debugging_notebooks/: base64_image_idea.ipynb  full_tutorial.ipynb  minimal_traitlets_example.ipynb  new_css.ipynb  no_tldraw.ipynb  plot_annotation_idea.ipynb  styles_JupyterLab.css  styles_orange.css  testing_vs_code.ipynb  tldraw_from_sandbox.ipynb  tldraw_python_interface.ipynb  tldraw_python_interface_global.ipynb  tldraw_shape1_example.ipynb  tldraw_shape2_example.ipynb  tldraw_shape_example.ipynb  tldraw_widget_numpy.ipynb  tldraw_yes.ipynb  z_base64_image_idea.ipynb  z_plot_annotation_idea.ipynb
draw/: __init__.py  tldraw.py  tldraw_component.tsx
future_ideas/: v2.ipynb
ideas/: demo_imagearray.ipynb  demo_storage.ipynb  testing.ipynb  tldraw_v2_imagearray.ipynb
js/: basic.jsx  bidirectional_stroke.jsx  coordinates.jsx  debug.jsx  flower_plot.jsx  get_stroke.jsx  image.jsx  image_and_array.jsx  image_set.jsx  imagearray.jsx  makereal.css  makereal.jsx  makestatic_png.jsx  makestatic_svg.jsx  makestatic_tldraw.jsx  makestatic_to_markdown.css  makestatic_to_markdown.jsx  matplotlib_annotate.jsx  minimal.jsx  monkey.jsx  points_from_numpy.jsx  reactive_color_picker.jsx  stroke.jsx  (+5 more)
(+31 files in other folders)
