[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tldraw"
version = "2.0.5"
dependencies = ["anywidget", "ipylab", "requests"]
description = "Tldraw for Jupyter"
license = "MIT"
readme = "README.md"
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/tldraw/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
# ensured-targets = ["src/tldraw/static/widget.js"]
# skip-if-exists = ["src/tldraw/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
path = "js"
