[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tldraw"
version = "3.0.0"
dependencies = ["anywidget", "ipylab", "ipykernel"]
description = "Tldraw for Jupyter"
requires-python = ">=3.13"
license = "MIT"
readme = "README.md"
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]

[tool.hatch.build]
only-packages = true
artifacts = ["src/tldraw/static/*", "js/*", "package.json", "node_config.mjs"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
skip-if-exists = ["src/tldraw/static/minimal.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
path = "js"
